# chat_massenger

./: README.md  docker-compose.yml
auth_service/: .env  Dockerfile  pyproject.toml
auth_service/proto/: auth.proto
auth_service/src/: main.py
auth_service/src/alembic/: env.py
auth_service/src/alembic/versions/: e4b6ae0e14e5_create_tables.py  e9c3b7b8f0b3_.py
auth_service/src/api/: auth.py
auth_service/src/core/: dependencies.py  security.py  settings.py
auth_service/src/db/: base.py
auth_service/src/models/: __init__.py  conversation.py  message.py  session.py  user.py
auth_service/src/rpc_services/: auth.py
auth_service/src/schemas/: session.py  token.py  user.py
auth_service/src/sdk/repositories/: auth.py  base.py  factory.py  session.py
auth_service/src/usecases/: base.py
auth_service/src/usecases/login/: request.py  response.py  usecase.py
auth_service/src/usecases/logout/: request.py  response.py  usecase.py
auth_service/src/usecases/refresh/: request.py  response.py  usecase.py
auth_service/src/usecases/signup/: request.py  response.py  usecase.py
auth_service/src/usecases/validate/: request.py  response.py  usecase.py
chat_service/: .env  Dockerfile  pyproject.toml
chat_service/src/: main.py
chat_service/src/core/: dependencies.py  settings.py
chat_service/src/db/: base.py
chat_service/src/models/: chat.py  message.py  participants.py
chat_service/src/rpc_services/: chat.py
chat_service/src/schemas/: chat.py  message.py  participant.py
chat_service/src/sdk/enums/: user_type.py
chat_service/src/sdk/repository/: base.py  chat.py  message.py  participants.py
chat_service/src/usecases/chat/create/: request.py  response.py  usecase.py
chat_service/src/usecases/chat/delete/: request.py  response.py  usecase.py
chat_service/src/usecases/chat/get/: request.py  response.py  usecase.py
chat_service/src/usecases/message/delete/: request.py  response.py  (+1 more)
chat_service/src/utils/: proto_converter.py
chat_service/src/websockets/: endpoints.py  manager.py
gateway/: .env  Dockerfile  main.py  pyproject.toml
gateway/api/: auth.py  chat.py
gateway/clients/: async_grpc_client.py
gateway/config/: settings.py
gateway/proto/: auth.proto  chat.proto
gateway/schemas/auth/: requests.py  responses.py  token.py
gateway/schemas/chat/: chat.py  message.py  participant.py
gateway/security/: auth.py
websocket_service/: .env  Dockerfile  main.py  pyproject.toml
websocket_service/config/: dependencies.py  settings.py
websocket_service/database/: db.py
websocket_service/managers/: pubsub_manager.py  rabbitmq_manager.py  websocket_manager.py
websocket_service/schemas/: messages.py
websocket_service/websockets/: endpoints.py  handlers.py
websocket_service/websockets_api/: endpoints.py  handlers.py
(+23 files in other folders)
