[project]
name = "chat-service"
version = "0.1.0"
description = ""
authors = [
    {name = "DimaKrylovDev",email = "metiq2007@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grpcio (>=1.75.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
