[project]
name = "websocket-service"
version = "0.1.0"
description = "WebSocket service for real-time chat"
authors = [
    {name = "DimaKrylovDev", email = "metiq2007@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.119.0,<0.120.0)",
    "uvicorn (>=0.32.0,<0.33.0)",
    "redis (>=5.0.0,<6.0.0)",
    "pydantic (>=2.12.2,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "grpcio (>=1.75.1,<2.0.0)",
    "grpcio-tools (>=1.75.1,<2.0.0)",
    "jwt (>=1.4.0,<2.0.0)",
    "websockets (>=14.0,<15.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
