[project]
name = "websocket-service"
version = "0.1.0"
description = ""
authors = [
    {name = "DimaKrylovDev",email = "metiq2007@yandex.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.120.3,<0.121.0)",
    "pydantic (>=2.12.3,<3.0.0)",
    "pydantic-settings (>=2.11.0,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "pika (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
